--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "description": "",
   "dependencies": {
-    "grpc": "^1.10.0"
+    "grpc": "^1.10.0",
+    "mali": "^0.8.0"
   }
 }
